--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     </title>
 
     <body>
-        <h1>CARO UTENTE IL SITO E MOMENTANEAMENTE IN FASE DI COSTRUZIONE</h1>
-        <h2>CI SCUSIAMO PER IL DISAGGIO</h2>
+        <center><h2>CARO UTENTE IL SITO E MOMENTANEAMENTE IN FASE DI COSTRUZIONE</h2> </center>
+        <center><h2>CI SCUSIAMO PER IL DISAGGIO</h2></center>
         <center><h3>LO STAFF DI REDCUBE</h3></center>
     </body>
 </html>
